--- a/docs/generic.css
+++ b/docs/generic.css
@@ -1,75 +1,72 @@
-
 body {
   margin: 0em;
   padding: 0px;
   color: rgb(0,0,0);
-  font-family: Verdana, Arial, Helvetica, sans-serif;
-  font-size: 80%;
+  font-family: sans-serif;
+  font-size: 90%;
   background: #ffffff;
 }
 
 p, ul, ol, dl {
   padding: 0px;
   margin: 0px;
+  line-height: 150%;
 }
 
-ol,ul {
-  margin-left: 3em;
-}
-
-ol,ul,dl,p {
+p {
   margin-top: 1em;
   margin-bottom: 1em;
 }
 
-p:first-line {
-  margin-right: 1em;
+ul, ol {
+  margin-left: 2em;
 }
 
-div.body p:first-letter {
-  font-size: 1.2em;
-  font-weight: bold;
-}
-
-h1,h2,h3,h4,h5,h6 {
-  font-weight: bold;
-  margin: 0px;
-  padding: 0px;
-  margin-top: 0.5em;
-}
-
-div.footer {
-  margin-top: 1em;
-}
-
-h1 {
-  font-size: 2em;
-}
-h2 {
-  font-size: 1.6em;
-}
-h3 {
-  font-size: 1.4em;
-}
-h4 {
-  font-size: 1.2em;
-}
-h5 {
-  font-size: 1em;
-}
-h6 {
-  font-size: 0.8em;
-}
-
-dl dt {
+dt {
   margin-left: 1em;
   margin-right: 2em;
-  font-weight: bold;
-  font-size: larger;
 }
 
 dl dd {
   margin-left: 2em;
   margin-right: 2em;
   margin-bottom: 0.5em;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-weight: bold;
+  margin: 0px;
+  padding: 0px;
+  margin-bottom: 0.25em;
+  border-bottom: 1px solid #aaa;
+}
+
+h1 {
+  margin-top: 0em;
+  font-size: 1.6em;
+}
+
+h2 {
+  margin-top: 1.0em;
+  font-size: 1.4em;
+}
+
+h3 {
+  margin-top: 1.0em;
+  font-size: 1.2em;
+}
+
+h4 {
+  margin-top: 1.0em;
+  font-size: 1.1em;
+}
+
+h5 {
+  margin-top: 0.75em;
+  font-size: 1em;
+}
+
+h6 {
+  margin-top: 0.75em;
+  font-size: 0.8em;
 }
